se agrega template para nuevo tipo de notificaciones, guardado de fcm token
